--- a/src/main/resources/home.fxml
+++ b/src/main/resources/home.fxml
@@ -129,7 +129,7 @@
                         <VBox fx:id="vb10" layoutX="230.0" layoutY="-19.0" prefHeight="168.0" prefWidth="106.0">
                            <children>
                               <Accordion fx:id="acc" />
-                              <Button fx:id="open" mnemonicParsing="false" onAction="#handleUploadFile" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: #ffffff; -fx-border-color: #B8B8B8;" text="ouvrir" textFill="#7c2e94" />
+                              <Button fx:id="open" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" style="-fx-background-color: #ffffff; -fx-border-color: #B8B8B8;" text="ouvrir" textFill="#7c2e94" />
                               <Button fx:id="encrypt" mnemonicParsing="false" onAction="#handleEncryptFile" prefHeight="25.0" prefWidth="107.0" style="-fx-background-color: #ffffff; -fx-border-color: #B8B8B8;" text="crypter" textFill="#6f2780" />
                               <Button fx:id="decrypte" mnemonicParsing="false" onAction="#handleDecryptFile" prefHeight="25.0" prefWidth="111.0" style="-fx-background-color: #ffffff; -fx-border-color: #B8B8B8;" text="decrypter" textFill="#581c70" />
                               <Button fx:id="download" mnemonicParsing="false" prefHeight="25.0" prefWidth="107.0" style="-fx-background-color: #ffffff; -fx-border-color: #B8B8B8;" text="telecharger" textFill="#662682" />
@@ -177,7 +177,7 @@
                <children>
                   <Pane fx:id="p4" prefHeight="93.0" prefWidth="139.0">
                      <children>
-                        <Button fx:id="upload" layoutX="18.0" layoutY="45.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="115.0" style="-fx-background-radius: 20;" text="Nouveau fichier" textFill="#5d1f9a" />
+                        <Button fx:id="upload" layoutX="18.0" layoutY="45.0" mnemonicParsing="false" onAction="#handleUploadFile"  prefHeight="25.0" prefWidth="115.0" style="-fx-background-radius: 20;" text="Nouveau fichier" textFill="#5d1f9a" />
                      </children>
                   </Pane>
                   <Button fx:id="b2" alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="25.0" prefWidth="135.0" style="-fx-background-color: #6F3173;" text="Acceuil" textFill="WHITE" />
